# mssql-mcp-python

./: .coveragerc  .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TESTING.md  docker-compose.yml  k8.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: HOW_TO_USE.md
src/mssql_mcp/: __init__.py  __main__.py  cli.py  config.py  db.py  health.py  logging_config.py  metrics.py  policy.py  server.py  tools.py  utils.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_health.py  test_tools.py
tests/unit/: __init__.py  test_config.py  test_db.py  test_policy.py  test_utils.py
